[metadata]
name = sms-gap
version = 0.1.0
author = sup39
author_email = sms@sup39.dev
description = Library for finding floor gaps in Super Mario Sunshine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sup39/sms-gap
project_urls =
  Bug Tracker = https://github.com/sup39/sms-gap/issues
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.6
install_requires =
  torch >= 1.11.0
  numpy >= 1.22.3

[options.packages.find]
where = src
